--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   sqflite: ^2.0.2
   flutter_material_color_picker: ^1.1.0+2
   fluttertoast: ^8.0.8
+  flutter_slidable: ^1.2.0
+  percent_indicator: ^4.0.0
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
