--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_slidable: ^1.2.0
   percent_indicator: ^4.0.0
   charts_flutter: ^0.12.0
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
